# gst-ssd1331

./: .gitignore  README  configure.ac
plugins/: Makefile.am  ftdi_util.c  ftdi_util.h  gstssd1331.c  gstssd1331.h  gstssd1331plugin.c  inspect.sh  launch.sh  ssd_displ.c  ssd_displ.h  ssd_displ_graph.c  ssd_displ_graph.h
tools/: Makefile.am  gstssd1331.c
